syntax = "proto3";

package ananke;

option go_package = "ananke/api/proto";

import "google/protobuf/timestamp.proto";
import "core.proto";
import "ananke/object.proto";

service PreorderService {
  rpc InitiatePreorder(InitiatePreorderRequest) returns (PreorderResponse) {}
  rpc ChangePreorderStatusByInvoiceId(ChangePreorderStatusByInvoiceIdRequest) returns (core.GenericResponse) {}
}

message InitiatePreorderRequest {
  core.BaseRequest base = 1;
  int32 reservation_type_id = 2;
  string success_return_url = 3;
  string failure_return_url = 4;
}
  
message ChangePreorderStatusByInvoiceIdRequest {
  core.BaseRequest base = 1;
  int32 invoice_id = 2;
  ReservationStatus status = 3;
}

message PreorderResponse {
  core.BaseResponse base = 1;
  Preorder preorder = 2;
}
